# Molecule_Builder

./: .gitignore  BLOG_HOW_I_BUILT_THIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  LAUNCH_CHECKLIST.md  LAUNCH_POSTS.md  LICENSE  OUTREACH_EMAILS.md  README.md  SUBMISSIONS.md  amino_acids.py  atomic_particle_physical_laws.py  covalent_bonds.py  lewis_structure.py  main.py  molecular_conformations.py  molecule_visualization.py  pyproject.toml  quantum_model.py  quantum_visualization.py  quantum_wavefunctions.py  railway.toml  reuirements.txt  synthesize.py  vsepr_model.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  frontend-test.yml  release-sdk.yml  studio-test.yml  test.yml
examples/: README.md  case_study_ibuprofen.py  smiles_to_manufacturing.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
legacy/: atomic_particle_physical_laws.txt  bohr_model.py  element_data.py
molbuilder/: __init__.py  __main__.py
saas/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
saas/alembic/: env.py
saas/alembic/versions/: 0001_initial_schema.py  0002_team_management.py
saas/app/: config.py  dependencies.py  exceptions.py  landing.html  main.py  middleware.py  middleware_versioning.py
saas/app/auth/: api_keys.py  jwt_handler.py  rate_limiter.py  roles.py  team_roles.py
saas/app/models/: audit.py  auth.py  batch.py  billing.py  common.py  elements.py  feasibility.py  file_io.py  library.py  molecule.py  process.py  retrosynthesis.py  team.py
saas/app/routers/: analytics.py  audit.py  auth.py  batch.py  billing.py  elements.py  feasibility.py  file_io.py  legal.py  library.py  molecule.py  process.py  reports.py  retrosynthesis.py  teams.py  version.py
saas/app/services/: audit_db.py  batch_worker.py  database.py  feasibility_service.py  file_io_service.py  job_db.py  library_db.py  molecule_service.py  molecule_store.py  prediction_service.py  process_service.py  retro_service.py  stripe_service.py  team_db.py  usage_tracker.py  user_db.py
saas/docs/validation/: API_versioning_policy.md  IQ_protocol.md  OQ_protocol.md  PQ_protocol.md
saas/scripts/: backup.py  migrate_sqlite_to_pg.py  verify_migration.py
saas/tests/: conftest.py  test_admet_endpoint.py  test_analytics.py  test_audit.py  test_auth.py  test_batch.py  test_billing.py  test_elements.py  test_file_io.py  test_gdpr.py  test_health.py  test_landing.py  test_legal.py  test_library.py  test_middleware.py  test_molecule.py  test_prediction_endpoint.py  test_process.py  test_rbac.py  test_reports.py  test_retrosynthesis.py  test_solubility_endpoint.py  test_teams.py  test_user_db.py  test_versioning.py
scripts/: build_ord_data.py  train_condition_model.py  train_retro_scorer.py
sdk/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/molbuilder_client/: __init__.py  _async_client.py  _base.py  _client.py  _exceptions.py  _models.py
sdk/tests/: conftest.py  test_admet_sdk.py  test_async.py  test_auth.py  test_batch.py  test_billing.py  test_elements.py  test_errors.py  test_file_io_sdk.py  test_library.py  test_molecule.py  test_process.py  test_reports_sdk.py  test_retro.py
studio/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
tests/: __init__.py  test_admet.py  test_atomic.py  test_bonding.py  test_bonding_graph_coverage.py  test_cache.py  test_condition_prediction.py  test_coords.py  test_core.py  test_coverage_boost.py  test_drug_validation.py  test_dynamics.py  test_edge_cases.py  test_feasibility.py  test_fg_smarts_validation.py  test_interaction_viz.py  test_io.py  test_mechanisms.py  test_ml_features.py  test_ml_predict.py  test_molecule.py  test_ord_integration.py  test_pdf_report.py  test_pka.py  test_process.py  test_process_coverage.py  test_properties.py  test_reactions.py  test_reagent_database.py  test_redox_transforms.py  test_reports.py  test_retro_features.py  test_retro_graph_transforms.py  test_retro_scorer.py  test_retrocast_adapter.py  test_ring_geometry.py  test_sa_score.py  test_smarts.py  test_smiles.py  test_solubility.py  (+3 more)
tutorials/: 01_smiles_to_conditions.ipynb  02_retrosynthesis_planning.ipynb  03_process_engineering.ipynb
(+285 files in other folders)
