[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molbuilder"
version = "1.1.1"
description = "Professional-grade molecular engineering toolkit: atoms to retrosynthesis to process engineering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Taylor C. Powell"},
]
keywords = [
    "chemistry", "molecular-modeling", "retrosynthesis", "cheminformatics",
    "SMILES", "VSEPR", "process-engineering", "drug-discovery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Taylor-C-Powell/Molecule_Builder"
Repository = "https://github.com/Taylor-C-Powell/Molecule_Builder"
Issues = "https://github.com/Taylor-C-Powell/Molecule_Builder/issues"

[project.scripts]
molbuilder = "molbuilder.__main__:main"

[tool.setuptools.packages.find]
include = ["molbuilder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
