[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molbuilder-client"
version = "0.2.0"
description = "Python SDK for the MolBuilder REST API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Wedge Dev Co", email = "taylorp661@gmail.com" }]
keywords = ["chemistry", "molecule", "smiles", "retrosynthesis", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://www.molbuilder.io"
Documentation = "https://www.molbuilder.io/docs"
Repository = "https://github.com/Taylor-C-Powell/Molecule_Builder"

[tool.hatch.build.targets.wheel]
packages = ["molbuilder_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
